# ergodic

./: README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: extractor.ipynb  intro.ipynb  process.ipynb
src/ergodic/: auth.py  client.py  display.py
src/ergodic/actions/: match.py  suggest.py
src/ergodic/assets/: asset_client.py  object.py  utils.py
src/ergodic/collections/: collections_client.py  utils.py
src/ergodic/extraction/: collections_client.py
src/ergodic/tasks/: extract.py  match.py  suggest.py
