[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magpy"
version = "0.1.0"
description = "ergodic.ai python client"
authors = [{name = "Andre", email = "andre@ergodic.ai"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "joblib",
    "networkx",
    "pydantic",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "fastparquet",
    "pyarrow",
    "tqdm",
    "python-dotenv",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/ergodic-ai/magpy"