[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ergodic"
version = "0.1.0"
description = "ergodic.ai python client"
authors = [{name = "Andre", email = "andre@ergodic.ai"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/ergodic-ai/magpy"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
